# WebDevInstagram

./: .coverage  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.MD  Taskfile.yml  docker-compose.yml  lint_output.txt  pyproject.toml  test_final.txt  test_output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/src/adapters/inbound/api/: images.py
backend/src/adapters/outbound/auth/: oauth_provider.py
backend/src/adapters/outbound/persistence/: database.py  models.py
backend/src/adapters/outbound/storage/: s3_storage.py
backend/src/application/: config.py  dependencies.py  dtos.py
backend/src/domain/: time_provider.py
backend/src/domain/images/: entities.py  services.py
backend/src/domain/social/: entities.py  services.py
backend/src/domain/users/: entities.py  repositories.py  services.py
backend/tests/: test_main.py
docs/: GITHUB_SETTINGS_GUIDE.md
src/defaultpython/: api.py  config.py  main.py
tests/: conftest.py  test_main.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_api.py
ugram/: docker-compose.yml  pyproject.toml  ugram.db
ugram/src/: main.py
ugram/src/adapters/inbound/api/: images.py  social.py  users.py
ugram/src/adapters/outbound/: time_provider.py
ugram/src/adapters/outbound/persistence/: database.py  models.py  sqlalchemy_image_repository.py  sqlalchemy_user_repository.py
ugram/src/adapters/outbound/storage/: local_storage.py  s3_storage.py
ugram/src/application/: config.py  dependencies.py  dtos.py
ugram/src/domain/images/: repositories.py
ugram/src/domain/social/: repositories.py
ugram/src/domain/users/: entities.py  repositories.py  services.py
ugram/tests/: conftest.py  test_main.py
ugram/tests/integration/: test_api.py  test_users.py
